--- a/frontend/src/app/components/crear-clase/crear-clase.component.html
+++ b/frontend/src/app/components/crear-clase/crear-clase.component.html
@@ -151,9 +151,9 @@
                 Volver
               </button>
               <button
-                type="button"
-                [disabled]="classForm.invalid"
+                type="submit"
                 class="btn btn-succces-outline-secondary btn-lg float-end"
+                [disabled]="classForm.invalid"
               >
                 Guardar
               </button>
