--- a/frontend/src/app/components/crear-instructor/crear-instructor.component.html
+++ b/frontend/src/app/components/crear-instructor/crear-instructor.component.html
@@ -147,7 +147,7 @@
                 Volver
               </button>
               <button
-                type="button"
+                type="submit"
                 class="btn btn-outline-secondary btn-lg float-end"
                 [disabled]="couchForm.invalid"
               >
