--- a/frontend/src/app/components/instructores/instructores.component.html
+++ b/frontend/src/app/components/instructores/instructores.component.html
@@ -38,7 +38,7 @@
           class="btn btn-dark"
           data-bs-toggle="modal"
           data-bs-target="#Modificar"
-          routerLink="/editCoach"
+          [routerLink]="['/editCoach', instructores._id]"
         >
           Modificar
         </button>
