--- a/frontend/src/app/components/class/class.component.html
+++ b/frontend/src/app/components/class/class.component.html
@@ -45,14 +45,12 @@
         >
       </li>
       <li>
-        <a class="dropdown-item"
-          >Fecha: <input type="date" value="2023-03-08"
-        /></a>
+        <a class="dropdown-item">Fecha: <input type="date" value="" /></a>
       </li>
+      <button type="button" class="btn btn-dark mt-3 float-end">Filtrar</button>
     </ul>
   </div>
-  <br />
-  <br />
+
   <div class="container">
     <!--
         /<div class="row">
