--- a/frontend/src/app/components/crear-clase/crear-clase.component.html
+++ b/frontend/src/app/components/crear-clase/crear-clase.component.html
@@ -72,7 +72,8 @@
             <div class="mt-3">
               <input
                 formControlName="Fecha"
-                type="text"
+                type="date"
+                value="2023-03-08"
                 class="form-control form-control-lg"
                 placeholder="Fecha"
               />
@@ -90,20 +91,22 @@
             <div class="mt-3">
               <input
                 formControlName="Hora"
-                type="text"
                 class="form-control form-control-lg"
-                placeholder="Hora"
+                type="time"
+                id="time1"
+                value="05:00"
+                min="05:00"
+                max="09:00"
               />
-            </div>
-
-            <div
-              class="text-danger"
-              *ngIf="
-                classForm.get('Hora')?.hasError('required') &&
-                classForm.get('Hora')?.touched
-              "
-            >
-              <span>La Hora <strong>es obligatoria</strong></span>
+              <div
+                class="text-danger"
+                *ngIf="
+                  classForm.get('Hora')?.hasError('required') &&
+                  classForm.get('Hora')?.touched
+                "
+              >
+                <span>La Hora <strong>es obligatoria</strong></span>
+              </div>
             </div>
             <div class="mt-3">
               <input
@@ -159,21 +162,6 @@
               </button>
             </div>
           </form>
-          <!--
-            Por si no jala con el time
-            <p>Fecha: <input type="date" value="2023-03-08" /></p>
-          <p>
-            Hora:
-            <select name="especialidad" formControlName="Hora">
-              <option>17:00</option>
-              <option>19:00</option>
-              <option>21:00</option>
-            </select>
-             <p>Cupo: <input type="text" formControlName="Cupo" /></p>
-          <p>Foto_Clase: <input type="text" formControlName="Foto_Clase" /></p>
-          <br />
-          <br />
-          </p>-->
         </div>
       </div>
     </div>
