--- a/frontend/src/app/components/crear-clase/crear-clase.component.html
+++ b/frontend/src/app/components/crear-clase/crear-clase.component.html
@@ -50,12 +50,18 @@
               </div>
             </div>
             <div class="mt-3">
-              <input
+              <select
                 formControlName="Nombre_Instructor"
-                type="text"
-                class="form-control form-control-lg"
+                class="form-select form-select-lg"
                 placeholder="Instructor"
-              />
+              >
+                <option
+                  *ngFor="let instructores of listInstuctores"
+                  [value]="instructores.Nombre_Completo"
+                >
+                  {{ instructores.Nombre_Completo }}
+                </option>
+              </select>
               <div
                 class="text-danger"
                 *ngIf="
