--- a/frontend/src/app/components/instructores/instructores.component.html
+++ b/frontend/src/app/components/instructores/instructores.component.html
@@ -26,12 +26,12 @@
     >
       <div class="card-body">
         <img src="../../../assets/UserIns.png" class="card-img-top" alt="..." />
-        <h5 class="card-title">{{ instructores.Nombre_Completo }}</h5>
-        <p>{{ instructores.Edad }}</p>
-        <p>{{ instructores.Correo }}</p>
-        <p>{{ instructores.Telefono }}</p>
-        <p>{{ instructores.Especialidad }}</p>
-        <p>{{ instructores.Foto_Instructor }}</p>
+        <h5 class="card-title">Nombre: {{ instructores.Nombre_Completo }}</h5>
+        <p>Edad: {{ instructores.Edad }}</p>
+        <p>Email: {{ instructores.Correo }}</p>
+        <p>Teléfono: {{ instructores.Telefono }}</p>
+        <p>Especialidad: {{ instructores.Especialidad }}</p>
+        <p>Foto: {{ instructores.Foto_Instructor }}</p>
         <!-- Button trigger modal -->
         <button
           type="button"
