--- a/frontend/src/app/components/crear-clase/crear-clase.component.html
+++ b/frontend/src/app/components/crear-clase/crear-clase.component.html
@@ -161,7 +161,7 @@
               </button>
               <button
                 type="submit"
-                class="btn btn-succces-outline-secondary btn-lg float-end"
+                class="btn btn-outline-success btn-lg float-end"
                 [disabled]="classForm.invalid"
               >
                 Guardar
