--- a/frontend/src/app/components/crear-instructor/crear-instructor.component.html
+++ b/frontend/src/app/components/crear-instructor/crear-instructor.component.html
@@ -92,12 +92,18 @@
             </div>
 
             <div class="mt-3">
-              <input
+              <select
                 formControlName="Especialidad"
-                type="text"
-                class="form-control form-control-lg"
+                class="form-select form-select-lg"
                 placeholder="Especialidad"
-              />
+              >
+                <option>Aeróbics</option>
+                <option>Entrenamientos de pecho</option>
+                <option>Entrenamientos de espalda</option>
+                <option>Entrenamiento de biceps</option>
+                <option>Entrenamiento piernas</option>
+              </select>
+
               <div
                 class="text-danger"
                 *ngIf="
@@ -134,13 +140,13 @@
             <div class="mt-3">
               <button
                 routerLink="/instructores"
-                class="btn btn-outline-dark btn-lg float-end"
+                class="btn btn-outline-dark btn-lg float-start"
               >
                 Volver
               </button>
               <button
                 type="submit"
-                class="btn btn-outline-secondary btn-lg float-end"
+                class="btn btn-outline-success btn-lg float-end"
                 [disabled]="instructorForm.invalid"
               >
                 Guardar
