--- a/frontend/src/app/components/class/class.component.html
+++ b/frontend/src/app/components/class/class.component.html
@@ -67,6 +67,15 @@
           /></a>
         </li>
       </div>
+      <br />
+      <br />
+      <button
+        type="button"
+        class="btn btn-outline-dark float-end fixed-bottom"
+        (click)="limpiarFiltros()"
+      >
+        Limpiar
+      </button>
     </ul>
   </div>
 
