--- a/frontend/src/app/components/class/class.component.html
+++ b/frontend/src/app/components/class/class.component.html
@@ -34,10 +34,10 @@
       <div fxLayout="row">
         <li>
           <a class="dropdown-item"
-            >Clase:
+            >Clase/Instructor:
             <input
               type="text"
-              placeholder="Buscar Clase"
+              placeholder="Clase/Instructor"
               class="form-control"
               [(ngModel)]="filteredClase"
             />
